--- a/summaryex/changes.txt
+++ b/summaryex/changes.txt
@@ -1,14 +1,5 @@
 - changed variable types in for loop in print file to avoid plagiarism claims
 - rather than read in file in every method / etc, read it in once in main
 - changed team/player search, rather than use hardcoded, read in teams, used a set 
+- changed the file reader to be able to read into struct
 - 
-
-
-- <vector<vector<string>>
-
-VECTOR (ALL STATS)
-    VECTOR (NAME, TEAM, GS, YC, RC)
-        STRING
-
-
-        http://www.acodemics.co.uk/2010/03/08/reading-a-csv-file-in-c/
